Corrected h1 text align back to center

--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ h1 {
     font-weight: 600;
     line-height: normal;
     text-transform: uppercase;
+    text-align: center;
 }
 
 
